[B] 'directional' spells didn't work if not of original realm.
[B] inventory wasn't refreshed after some scrolls(eg. id,enchant) are used.
[B] 'A  on broken door'. (do_cmd_look)

22/06/2002 (Yakina)
- updates needed for bcc.  Thanks Yakina for courtesy.

23/06/2002 (Jir)
- login is done according to the informations sent by the server.
  (race/class addition still needs client update, tho)
- SKILL_MISC, SKILL_AGILITY, SKILL_CALMNESS, SKILL_SWIM, SKILL_RICOCHET
- SKILL_MARTIAL_ARTS in place of former Monk.
[B] potion of learning.



** [B] stands for Bugfix.
** [C] stands for Client changes.
** [H] stands for Hack and rebalancement :)
** [P] stands for Porting from ToME.

=============================================================================
concisely: what's hot now?

- multiple-dungeons stuff
  + we should preserve level_up_y etc. for manually-added dungeons/towers.
- quest system
- skill system
  + interfere() should be affected by archery/wizardly skills?
  + no SKILL_BOOMERANG ?
  + SKILL_SWIM, AGILITY(+sp), CALMNESS
  + Archery and Hunting should be separate skills?
    (Hunting books for non-archers are too strong)
  + spell_info should be redone
- LUA hook
- csfunc
- alignment (let's wait for EE :)
- item stacking

=============================================================================
below this line are the unfixed bugs known:

[B] House doors still seem to crash sometimes. (door even vanishes??)
[B] wpos display hides wound states(eg.'Deep Gash')
[B] ever-charging arts (eg.star)
[B] 'You hit it.' etc in town (99% problem in zcave.m_idx)
    sometimes, monsters attack the player from nowhere.. prolly same root?
	* this only happens when rebooting the server and caves lost.
[B] some monsters become 'immune' to spell attacks.
[B][C] chat-history contains lines with 'mindcrafter'. 
[B] p_ptr->furry, lol
[B] 'Ring of Polymorphing of'.
[B] cannot 'run' near the outer permawall (run_test)
[B] mon_vis, obj_vis etc. are messed while the player is off.