@@ -1126,8 +1126,9 @@ To find the latest change quickly, search ==== :)
 23/06/2002 (Jir)
 - login is done according to the informations sent by the server.
   (race/class addition still needs client update, tho)
-- SKILL_MISC, SKILL_AGILITY, SKILL_CALMNESS, SKILL_SWIM, SKILL_RICOCHET
-- SKILL_MARTIAL_ARTS in place of former Monk.
+- SKILL_MISC, SKILL_AGILITY, SKILL_CALMNESS, SKILL_SWIM, SKILL_RICOCHET,
+  SKILL_BOOMERANG, SKILL_MARTIAL_ARTS, SKILL_TRAINING
+- bow/xbow/sling/boomerang skills can prevent ammos from breaking.
 [B] potion of learning.
 
 
